--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,12 +2,15 @@ Package: learnr.tidyeval
 Title: Tutorial for Tidyeval system
 Version: 0.0.0.9000
 Authors@R: c(
-  person(given = "Ian", family = "Lyttle", email = "ian.lyttle@schneider-electric.com", role = c("aut", "cre"))
+  person(given = "Ian", family = "Lyttle", email = "ian.lyttle@schneider-electric.com", role = c("aut", "cre")),
+  person("Lionel", "Henry", ,"lionel@rstudio.com", "aut", comment = "tidyeval framework"),
+  person("Hadley", "Wickham", ,"hadley@rstudio.com", "aut", comment = "tidyeval framework")
   )
 Description: This is an experiment to try to teach some tidyeval concepts, and use the learnr package.
 Depends: R (>= 3.4.1)
-License: What license is it under?
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 URL: https://github.com/ijlyttle/learnr.tidyeval
 BugReports: https://github.com/ijlyttle/learnr.tidyeval/issues
+RoxygenNote: 6.0.1
