--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,6 @@
 export("%>%")
 export(enexpr)
 export(enquo)
-export(ensym)
 export(expr)
 export(exprs)
 export(number)
@@ -12,9 +11,12 @@ export(quos)
 export(sym)
 export(syms)
 importFrom(magrittr,"%>%")
+importFrom(rlang,"!!!")
+importFrom(rlang,"!!")
+importFrom(rlang,UQ)
+importFrom(rlang,UQS)
 importFrom(rlang,enexpr)
 importFrom(rlang,enquo)
-importFrom(rlang,ensym)
 importFrom(rlang,expr)
 importFrom(rlang,exprs)
 importFrom(rlang,quo)
