--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,8 +13,10 @@ Encoding: UTF-8
 LazyData: true
 URL: https://github.com/ijlyttle/learnr.tidyeval
 BugReports: https://github.com/ijlyttle/learnr.tidyeval/issues
-RoxygenNote: 6.0.1
+RoxygenNote: 6.1.0
 Imports:
     rlang (>= 0.1.2),
     magrittr,
     dplyr
+Suggests: 
+    roxygen2
