makes it easier to run locally

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(number)
 export(quo)
 export(quo_name)
 export(quos)
+export(run_tidyeval_tutorial)
 export(sym)
 export(syms)
 importFrom(magrittr,"%>%")
