--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,6 +17,9 @@ RoxygenNote: 6.1.0
 Imports:
     rlang (>= 0.1.2),
     magrittr,
-    dplyr
+    shiny,
+    learnr,
+    dplyr,
+    glue
 Suggests: 
     roxygen2
